# nive

./: .clang-format  .gitignore  CMakeLists.txt
src/: argparse.c  argparse.h  const.h  logger.c  logger.h  main.c  option.c  option.h  safemem.c  safemem.h
